--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@
   /**
    * colors
    */
-   
+
   --cadet-blue-crayola: hsl(220, 14%, 75%);
   --dark-electric-blue: hsl(217, 9%, 45%);
   --shamrock-green: hsl(146, 51%, 41%);
@@ -111,7 +111,7 @@ button {
 }
 
 ion-icon {
-  pointer-events: none; 
+  pointer-events: none;
   --ionicon-stroke-width: 40px;
 }
 
@@ -130,13 +130,12 @@ body {
 
 
 
+
 /*-----------------------------------*\
   #REUSED STYLE
 \*-----------------------------------*/
 
 .container { padding-inline: 15px; }
-
-.section { padding-block: var(--section-padding); }
 
 .img-cover {
   width: 100%;
@@ -152,14 +151,11 @@ body {
   #HEADER
 \*-----------------------------------*/
 
-/* .navbar,
-.overlay { display: none; } */
-
 .header {
-  /* position: relative; */
+  position: relative;
   padding-block: 20px;
   box-shadow: var(--shadow-1);
-  /* z-index: 1; */
+  z-index: 1;
 }
 
 .header .container {
@@ -170,12 +166,12 @@ body {
 
 .nav-open-btn,
 .header-action-btn {
-  font-size: 25px; 
+  font-size: 25px;
   color: var(--dark-electric-blue);
   transition: var(--transition-1);
 }
 
-:is( .nav-open-btn, .header-action-btn ):is(:hover, :focus) { color: var(--eerie-black); }
+:is(.nav-open-btn, .header-action-btn):is(:hover, :focus) { color: var(--eerie-black); }
 
 .header-action {
   display: flex;
@@ -217,7 +213,7 @@ body {
 .navbar-link {
   font-size: var(--fs-2);
   color: var(--eerie-black);
-  font-weight: 700;
+  font-weight: var(--fw-700);
   padding-block-end: 22px;
 }
 
@@ -323,7 +319,6 @@ body {
 
 .product-content .badge {
   background-color: var(--sea-green_10);
-  max-width: max-content;
   color: var(--sea-green);
   font-weight: var(--fw-700);
   padding: 4px 10px;
@@ -356,7 +351,7 @@ body {
 
 .counter-btn:is(:hover, :focus) { color: var(--shamrock-green); }
 
-.counter-wrapper .data {
+.counter-wrapper .span {
   color: var(--eerie-black);
   font-weight: var(--fw-700);
 }
@@ -388,12 +383,8 @@ body {
   #MEDIA QUERIES
 \*-----------------------------------*/
 
-
-
-
-
 /**
- * responsive for large than 768px screen
+ * responsive for larger than 768px screen
  */
 
 @media (min-width: 768px) {
@@ -416,7 +407,7 @@ body {
   .header .container { max-width: 720px; }
 
 
-
+  
   /**
    * PRODUCT
    */
@@ -439,7 +430,7 @@ body {
 
 
 /**
- * responsive for large than 992px screen
+ * responsive for larger than 992px screen
  */
 
 @media (min-width: 992px) {
@@ -458,6 +449,8 @@ body {
     --fs-4: 1.3rem;
 
   }
+
+
 
   /**
    * REUSED STYLE
